
syntax = "proto3";

package robot.time.proto;

message RobotTimestamp {
  int64 ticks_since_epoch = 1;
}
